--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-
 h2{
     color: #ffffff;
 }
@@ -35,13 +34,11 @@ p{
 }
 #loggedIn{
   display: none;
-  /*display: flex;*/
   flex-direction: column;
   background-color: #e9ebee;
   min-height: 100vh;
 }
 #bar{
-  /*background-color: #3b5998;#425D96;*/
   background: linear-gradient(#526A9C, #3b5998);
   display: flex;
   justify-content: space-between;
@@ -54,23 +51,28 @@ p{
   display: flex;
   flex-direction: column;
   flex-flow: column;
-  /*justify-content: center;*/
 }
 button{
   max-width: 50%;
   margin-left: auto;
   margin-right: auto;
 }
-
 .aFriendYouHate:hover{
   background-color: yellow;
-}
-.imageBox{
-
 }
 .friendPic{
   max-width: 200px;
   max-height: 200px;
-  overflow: hidden;
+  margin-left: auto;
+  /*overflow: hidden;*/
 
+}
+.modal-content{
+  display: flex;
+}
+#enemyInfo{
+  margin-right: 5em;
+}
+.card-content.enemy>img{
+  padding-left: 500;
 }
